--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 #main {
     display: flex;
     flex-direction: row-reverse;
-
+    flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
 }
