--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,48 +1,77 @@
 * {
-    background-color: antiquewhite;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
-    margin: 0;
-}
-#main {
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-}
-
-.board {
-    border: 1px solid gray;
-    border-radius: 4px;
-}
-img {
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
-    padding: 4px;
-    border-radius: 8px;
+    box-sizing: border-box;
 }
 
 h2 {
     margin: 50px 0px 10px 30px;
 }
 
+/* .header {
+    width: 100%;
+} */
 .header {
+    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background-size: 100%;
+
+    text-decoration: none;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    font-size: 1rem;
+    font-weight: 900;
+    text-shadow: #cc6600;
+    display: flex;
+    justify-content: center;
     width: 100%;
 }
 
+.searchField {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 45px;
+}
+
 input {
-    padding: 15px;
-    font-size: 18px;
+    padding: 10px 15px;
+    margin-left: 15px;
 }
 button {
-    margin-left: 15px;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bolder;
-    background: tomato;
+    padding: 0 10px;
+    font-size: 18px;
+    border: 1px solid #cc6600;
+    border-radius: 25px;
+
+    color: #000;
+    transition: all 0.3s ease;
     cursor: pointer;
+}
+
+#moreButton {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+.modal-info {
+    position: relative;
+}
+#x {
+    cursor: pointer;
+    position: absolute;
+    top: 3px;
+    left: 5px;
+    background: linear-gradient(45deg, black, transparent);
+    padding: 5px;
+    font-weight: 900;
+    color: white;
+    margin: 0;
+    border-radius: 20px;
+}
+#x:hover {
+    color: red;
+    border-bottom: 2px solid red;
 }
 .modal-overlay {
     position: fixed;
@@ -54,4 +83,73 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+
+    grid-auto-columns: 1fr;
+    gap: 10px;
+}
+.image_div {
+    width: 100%;
+}
+.image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+    cursor: pointer;
+}
+.board {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.text {
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    width: 100%;
+    background-color: rgba(36, 36, 36, 0.74);
+    margin: 0;
+    color: aliceblue;
+}
+
+.modal_box img {
+    width: 500px;
+    height: 350px;
+    object-fit: cover;
+    border: dotted black 3px;
+
+    border-radius: 20px;
+}
+.modal_box h3,
+p {
+    margin-left: 5px;
+}
+.modal_box {
+    background: linear-gradient(45deg, black, transparent);
+    color: aliceblue;
+    border-radius: 5px;
+}
+.comment_input {
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    color: aliceblue;
+    background: transparent;
+    margin-bottom: 10px;
+}
+.comment_btn {
+    border: none;
+    color: whitesmoke;
+    border-bottom: 1px solid whitesmoke;
+    background: transparent;
+    margin-left: 10px;
+}
+.comment_btn:hover {
+    color: blue;
+    border-bottom: 3px solid blue;
 }
